--- a/jupyter-notebook-debian-base/Dockerfile
+++ b/jupyter-notebook-debian-base/Dockerfile
@@ -60,7 +60,7 @@ ENV CONDA_DIR=/opt/conda \
 ENV PATH=$CONDA_DIR/bin:$PATH \
     HOME=/home/$NB_USER
 
-ADD fix-permissions /usr/local/bin/fix-permissions
+ADD jupyter-notebook-debian-base/fix-permissions /usr/local/bin/fix-permissions
 # Create jovyan user with UID=1000 and in the 'users' group
 # and make sure these dirs are writable by the `users` group.
 RUN groupadd wheel -g 11 && \
@@ -131,10 +131,10 @@ ENTRYPOINT ["tini", "-g", "--"]
 CMD ["start-notebook.sh"]
 
 # Add local files as late as possible to avoid cache busting
-COPY start.sh /usr/local/bin/
-COPY start-notebook.sh /usr/local/bin/
-COPY start-singleuser.sh /usr/local/bin/
-COPY jupyter_notebook_config.py /etc/jupyter/
+COPY jupyter-notebook-debian-base/start.sh /usr/local/bin/
+COPY jupyter-notebook-debian-base/start-notebook.sh /usr/local/bin/
+COPY jupyter-notebook-debian-base/start-singleuser.sh /usr/local/bin/
+COPY jupyter-notebook-debian-base/jupyter_notebook_config.py /etc/jupyter/
 RUN fix-permissions /etc/jupyter/
 
 # Switch back to jovyan to avoid accidental container runs as root
